Fix some z-index issues

--- a/client/src/css/universal/RobeCard.css
+++ b/client/src/css/universal/RobeCard.css
@@ -26,7 +26,6 @@
 
 .robe-card img,
 .robe-card .image-container {
-  z-index: 5;
   display: block;
   overflow: hidden;
   max-width: 350px;
